{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 34,
  "lineage": "18197d70-f841-3e5f-9470-fac08365a78b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093c41142d9efbe0a",
            "arn": "arn:aws:ec2:ap-south-1:654654547956:elastic-ip/eipalloc-093c41142d9efbe0a",
            "association_id": "eipassoc-0280274bc76a06c13",
            "domain": "vpc",
            "id": "eipalloc-093c41142d9efbe0a",
            "instance": "i-09bed95f0ed1a7e6c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a28fee18d542450d",
            "private_dns": "ip-10-0-0-105.ap-south-1.compute.internal",
            "private_ip": "10.0.0.105",
            "public_dns": "ec2-13-234-162-189.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.162.189",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.dev",
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.cust"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b49a24cfb95941c",
            "arn": "arn:aws:ec2:ap-south-1:654654547956:instance/i-09bed95f0ed1a7e6c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bed95f0ed1a7e6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zxcvbnm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a28fee18d542450d",
            "private_dns": "ip-10-0-0-105.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b2d89a68bf7002c5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d152b478fe57307c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00335486d498619e8",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d152b478fe57307c"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.cust"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654547956:internet-gateway/igw-0ba8e037e3c26c8f3",
            "id": "igw-0ba8e037e3c26c8f3",
            "owner_id": "654654547956",
            "tags": {
              "name": "cust_ig"
            },
            "tags_all": {
              "name": "cust_ig"
            },
            "vpc_id": "vpc-03323d1a25e4466af"
          },
          "dependencies": [
            "aws_vpc.cust"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093c41142d9efbe0a",
            "connectivity_type": "public",
            "id": "nat-0adb0e8bab76847a3",
            "subnet_id": "subnet-00335486d498619e8"
          },
          "dependencies": [
            "aws_eip.elp",
            "aws_instance.dev",
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.cust"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654547956:route-table/rtb-0f0f6c9dafe0cde6c",
            "id": "rtb-0f0f6c9dafe0cde6c",
            "owner_id": "654654547956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba8e037e3c26c8f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03323d1a25e4466af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.cust"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ras",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a7f47ff58af0b5",
            "route_table_id": "rtb-0f0f6c9dafe0cde6c",
            "subnet_id": "subnet-00335486d498619e8"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.cust",
            "aws_subnet.public",
            "aws_vpc.cust"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654547956:security-group/sg-0d152b478fe57307c",
            "description": "allow ssh traffic",
            "egress": [],
            "id": "sg-0d152b478fe57307c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240827135811198100000001",
            "name_prefix": "terraform-",
            "owner_id": "654654547956",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "cust_sg"
            },
            "tags_all": {
              "name": "cust_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03323d1a25e4466af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cust"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654547956:subnet/subnet-073e325145e4b7f97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073e325145e4b7f97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654547956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pvtsub"
            },
            "tags_all": {
              "name": "pvtsub"
            },
            "vpc_id": "vpc-03323d1a25e4466af"
          },
          "dependencies": [
            "aws_vpc.cust"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654547956:subnet/subnet-00335486d498619e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00335486d498619e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654547956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pubsub"
            },
            "tags_all": {
              "name": "pubsub"
            },
            "vpc_id": "vpc-03323d1a25e4466af"
          },
          "dependencies": [
            "aws_vpc.cust"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654547956:vpc/vpc-03323d1a25e4466af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-0c4da30bc968ef2f2",
            "default_route_table_id": "rtb-0a2d34c0cc86e67e7",
            "default_security_group_id": "sg-03efc6dcc343c6f43",
            "dhcp_options_id": "dopt-0a9a3de593a917926",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03323d1a25e4466af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2d34c0cc86e67e7",
            "owner_id": "654654547956"
          }
        }
      ]
    }
  ]
}